# alice

./: .aiignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.dev.yml  docker-compose.docs.yml  docker-compose.local.yml  docker-compose.production.yml  docker-compose.yml  manage.py  package-lock.json  package.json  postcss.config.js  pyproject.toml
.devcontainer/: devcontainer.json
.github/: dependabot.yml
.github/workflows/: main.yml  master.yml  pr.yml
alice/: conftest.py
alice/contrib/sites/migrations/: 0003_set_site_domain_and_name.py
alice/static/css/: project.css
alice/static/js/: project.js  vendors.js
alice/templates/: base.html
alice/templates/allauth/elements/: button.html  field.html
alice/templates/allauth/layouts/: entrance.html
alice/templates/cotton/: alert.html  button.html  input.html  modal.html  navbar.html  pagination.html  table.html
alice/templates/users/: user_detail.html  user_form.html
alice/users/: adapters.py  apps.py  models.py  views.py
alice/users/api/: serializers.py  views.py
alice/users/migrations/: 0001_initial.py
alice/users/tests/: factories.py  test_admin.py  test_forms.py  test_managers.py  test_models.py  test_tasks.py  test_urls.py  test_views.py
alice/users/tests/api/: test_urls.py  test_views.py
app/: conftest.py  manage.py
app/alice/: asgi.py  urls.py  wsgi.py
app/alice/settings/: __init__.py  base.py  custom.py  docker.py  envvars.py  logging.py
app/alice/settings/templates/: settings.unittests.py
app/core/utils/: settings.py
app/static/: htmx.min.js
app/todo/: views.py
compose/production/traefik/: traefik.yml
config/: api_router.py  asgi.py  celery_app.py  urls.py  wsgi.py
config/settings/: base.py  local.py  production.py  test.py
docs/: conf.py  howto.rst  index.rst  make.bat  users.rst
docs/pycharm/: configuration.rst
locale/en_US/LC_MESSAGES/: django.po
locale/fr_FR/LC_MESSAGES/: django.po
locale/pt_BR/LC_MESSAGES/: django.po
scripts/: entrypoint.sh  production_data.py
webpack/: common.config.js
