[tool.poetry]
name = "alice"
version = "0.1.0"
description = "alice webservice"
authors = ["ALEXANDER VEGA <ajaradv@gmail.com>"]
license = "mit"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.0"
psycopg2 = "^2.9.9"
django-split-settings = "^1.3.0"


[tool.poetry.group.dev.dependencies]
pre-commit = "^3.6.2"
colorlog = "^6.8.2"

[tool.isort]
multi_line_output = 5
line_length = 119

[tool.yapf]
based_on_style = "google"
align_closing_bracket_with_visual_indent = true
coalesce_brackets = true
column_limit = 119
dedent_closing_brackets = true

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
